--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
+    "recharts": "^2.7.2",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
